# OpenGL-CameraCalibration

./: CMakeLists.txt  CameraDirectLinearTransformation.cpp  CameraDirectLinearTransformation.h  README.md  testCameraCalibration.cpp
exampleData/: 2D_points.txt  3D_points.txt
